.innerHTML wasn't recovering &nbsp; and this was causing consumers such as View Selection Source to lose it, b=165686, r=jst, sr=bzbarsky